feat[bk] add logic to app

--- a/WebAppCQRS/appsettings.json
+++ b/WebAppCQRS/appsettings.json
@@ -3,11 +3,15 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Database=TestDB;User Id=sa;Password=123456;",
-      "MysqlConnection": "Server=localhost;Database=TestDB;User=sa;Password=123456;"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=testdb;User=usuariotest;Password=123456;"
+  },
+  "Jwt": {
+    "Key": "KkDsLfv0aCVwuANG7gCAUG5L7achkapy",
+    "Issuer": "http://localhost:5113/",
+    "Audience": "http://localhost:5113/"
   },
 
   "AllowedHosts": "*"
